--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "alchemy-sdk": "^2.3.0",
+    "buffer": "^6.0.3",
     "ethers": "^5.7.2",
+    "keccak": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
